--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,19 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    //retrofit网络请求框架
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    //retrofit添加Json解析返回数据
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    //retrofit添加Rxjava支持
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    //rxjava框架
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
 }
