--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.william.jifanghelpdesk"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 2
-        versionName "0.1.3"
+        versionCode 3
+        versionName "0.2.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,12 +26,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    //retrofit网络请求框架
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    //retrofit添加Json解析返回数据
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    //retrofit添加Rxjava支持
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    //rxjava框架
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    //OkHttp网络请求框架
+    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
+    //添加Json解析返回数据
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+//    //retrofit网络请求框架
+//    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+//    //retrofit添加Json解析返回数据
+//    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+//    //retrofit添加Rxjava支持
+//    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+//    //rxjava框架
+//    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
 }
