--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.william.jifanghelpdesk"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 5
-        versionName "0.2.3"
+        versionCode 6
+        versionName "0.2.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -33,7 +33,7 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.61'
     implementation 'com.alibaba:fastjson:1.1.71.android'
-
+    implementation 'com.orhanobut:logger:1.15'
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
 
 //    //retrofit网络请求框架
