--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.william.jifanghelpdesk"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 10
-        versionName "0.3.5"
+        versionCode 11
+        versionName "0.4.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,14 +34,5 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.61'
     implementation 'com.alibaba:fastjson:1.1.71.android'
     implementation 'com.orhanobut:logger:1.15'
-    implementation 'cn.yipianfengye.android:zxing-library:2.2'
-
-//    //retrofit网络请求框架
-//    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-//    //retrofit添加Json解析返回数据
-//    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-//    //retrofit添加Rxjava支持
-//    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-//    //rxjava框架
-//    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+//    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 }
