--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.RegisterActivity"></activity>
+        <activity android:name=".view.RetrieveActivity"></activity>
+        <activity android:name=".view.RegisterActivity" />
         <activity android:name=".view.HomepageActivity" />
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.MainActivity">
